--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -658,6 +658,18 @@
   timestamp = {2019.04.05},
 }
 
+@Article{Akiki2018,
+  author    = {Akiki, T. J. and Averill, C. L. and Wrocklage, K. M. and Scott, J. C. and Averill, L. A. and Schweinsburg, B. and Alexander-Bloch, A. and Martini, B. and Southwick, S. M. and Krystal, J. H. and Abdallah, C. G.},
+  title     = {Default mode network abnormalities in posttraumatic stress disorder: A novel network-restricted topology approach},
+  journal   = {NeuroImage},
+  year      = {2018},
+  volume    = {176},
+  pages     = {489-498},
+  doi       = {10.1016/j.neuroimage.2018.05.005},
+  owner     = {Vincent},
+  timestamp = {2021.06.24},
+}
+
 @Article{Akimushkin2017,
   author    = {Akimushkin, C. and Amancio, D. R. and Novais Oliveira, O.},
   title     = {Text Authorship Identified Using the Dynamics of Word Co-Occurrence Networks},
@@ -838,6 +850,16 @@
   url          = {https://thelittledataset.com/2015/01/20/the-one-with-all-the-quantifiable-friendships/},
   owner        = {Vincent},
   timestamp    = {2018.11.11},
+}
+
+@Book{Aldama2014,
+  title     = {Conversations on Cognitive Cultural Studies: Literature, Language, and Aesthetics},
+  publisher = {Ohio State University Press},
+  year      = {2014},
+  author    = {Aldama, F. L. and Hogan, P. C.},
+  owner     = {Vincent},
+  timestamp = {2021.06.24},
+  url       = {https://kb.osu.edu/handle/1811/59113},
 }
 
 @Article{Alexander2019,
@@ -5541,6 +5563,23 @@
   timestamp = {2019.08.18},
 }
 
+@Article{Cai2017b,
+  author        = {Cai, H. and Zheng, V. W. and Chang, K. C.-C.},
+  title         = {A Comprehensive Survey of Graph Embedding: Problems, Techniques, and Applications},
+  journal       = {IEEE Transactions on Knowledge and Data Engineering},
+  year          = {2018},
+  volume        = {30},
+  number        = {9},
+  pages         = {1616-1637},
+  __markedentry = {[Vincent:]},
+  doi           = {10.1109/TKDE.2018.2807452},
+  groups        = {_Reviews / Surveys (Embeddings)},
+  owner         = {Vincent},
+  review        = {old title: A Comprehensive Survey of Graph Embedding: Problems, Techniques and Applications
+arXiv: https://arxiv.org/abs/1709.07604},
+  timestamp     = {2017.09.27},
+}
+
 @InProceedings{Calix2013,
   author    = {Calix, R. A. and Javadpout, L. and Khazaeli, M. and Knapp, G. M.},
   title     = {Automatic detection of nominal entities in speech for enriched content search},
@@ -6548,6 +6587,19 @@
   doi       = {10.18653/v1/d19-1431},
   owner     = {Vincent},
   timestamp = {2020.07.19},
+}
+
+@Article{Chen2019x,
+  author    = {Chen, J. and Wu, Y. and Xu, X. and Zheng, H. and Ruan, Z. and Xuan, Q.},
+  title     = {PSO-ANE: Adaptive Network Embedding With Particle Swarm Optimization},
+  journal   = {IEEE Transactions on Computational Social Systems},
+  year      = {2019},
+  volume    = {6},
+  number    = {4},
+  pages     = {649-659},
+  doi       = {10.1109/tcss.2019.2914935},
+  owner     = {Vincent},
+  timestamp = {2021.06.24},
 }
 
 @Book{Cheney2008,
@@ -7980,6 +8032,17 @@
   owner     = {Vincent},
   timestamp = {2020.12.01},
   url       = {https://global.oup.com/academic/product/the-physiology-of-the-novel-9780199208968},
+}
+
+@InProceedings{Damljanovic2012,
+  author    = {Damljanovic, D. and Bontcheva, K.},
+  title     = {Named entity disambiguation using linked data},
+  booktitle = {9th Extended Semantic Web Conference},
+  year      = {2012},
+  pages     = {231-240},
+  owner     = {Vincent},
+  timestamp = {2021.06.24},
+  url       = {http://2012.eswc-conferences.org/sites/default/files/eswc2012_submission_334.pdf},
 }
 
 @InProceedings{Danescu2011,
@@ -13040,6 +13103,19 @@
   timestamp = {2020.03.16},
 }
 
+@Article{GomezEsteban2019,
+  author    = {Gomez Esteban, P. and Rios Insua, D.},
+  title     = {A Model for an Affective Non-Expensive Utility-Based Decision Agent},
+  journal   = {IEEE Transactions on Affective Computing},
+  year      = {2019},
+  volume    = {10},
+  number    = {4},
+  pages     = {498-509},
+  doi       = {10.1109/taffc.2017.2737979},
+  owner     = {Vincent},
+  timestamp = {2021.06.24},
+}
+
 @Article{GomezUribe2015,
   author    = {Gomez-Uribe, C. A. and Hunt, N.},
   title     = {The Netflix Recommender System},
@@ -13868,6 +13944,18 @@
   doi       = {10.1016/j.neucom.2015.09.116},
   owner     = {Vincent},
   timestamp = {2020.01.05},
+}
+
+@Article{Guo2019,
+  author    = {Guo, S. X. and Sun, X. and Wang, S. X. and Gao, Y. and Feng, J.},
+  title     = {Attention-Based Character-Word Hybrid Neural Networks With Semantic and Structural Information for Identifying of Urgent Posts in {MOOC} Discussion Forums},
+  journal   = {IEEE Access},
+  year      = {2019},
+  volume    = {7},
+  pages     = {120522-120532},
+  doi       = {10.1109/access.2019.2929211},
+  owner     = {Vincent},
+  timestamp = {2021.06.24},
 }
 
 @Article{Guo2019f,
@@ -15726,6 +15814,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2017.04.20},
 }
 
+@InProceedings{Huang2019,
+  author    = {Huang, J. and Xiang, C. and Yuan, S. and Yuan, D. and Huang, X.},
+  title     = {Character-Aware Convolutional Recurrent Networks with Self-Attention for Emotion Detection on Twitter},
+  booktitle = {International Joint Conference on Neural Networks},
+  year      = {2019},
+  doi       = {10.1109/ijcnn.2019.8852171},
+  owner     = {Vincent},
+  timestamp = {2021.06.24},
+}
+
 @InProceedings{Huang2020c,
   author    = {Huang, Q. and Xiong, Y. and Rao, A. and Wang, J. and Lin, D.},
   title     = {MovieNet: A Holistic Dataset for Movie Understanding},
@@ -16652,6 +16750,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1109/tvcg.2009.106},
   owner     = {Vincent},
   timestamp = {2020.08.11},
+}
+
+@Article{Jin2019,
+  author    = {Jin, Y. and Xie, J. and Guo, W. and Luo, C. and Wu, D. and Wang, R.},
+  title     = {{LSTM}-{CRF} Neural Network With Gated Self Attention for Chinese {NER}},
+  journal   = {IEEE Access},
+  year      = {2019},
+  volume    = {7},
+  pages     = {136694-136703},
+  doi       = {10.1109/access.2019.2942433},
+  owner     = {Vincent},
+  timestamp = {2021.06.24},
 }
 
 @InProceedings{Jing2007,
@@ -18755,6 +18865,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2020.01.02},
 }
 
+@Article{Ku2007,
+  author    = {Ku, L.-W. and Chen, H.-H.},
+  title     = {Mining opinions from the Web: Beyond relevance retrieval},
+  journal   = {Journal of the American Society for Information Science and Technology},
+  year      = {2007},
+  volume    = {58},
+  number    = {12},
+  pages     = {1838-1850},
+  doi       = {10.1002/asi.20630},
+  owner     = {Vincent},
+  timestamp = {2021.06.24},
+}
+
 @InProceedings{Kubis2019,
   author    = {Kubis, M. and Mickiewicz, A.},
   title     = {Quantitative Analysis of Character Networks in Polish XIX and XX Century Novels},
@@ -20826,6 +20949,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2020.12.15},
 }
 
+@InProceedings{Li2019o,
+  author    = {Li, J. and Zhang, C. and Tan, H. and Li, C.},
+  title     = {Complex Networks of Characters in Fictional Novels},
+  booktitle = {18th IEEE/ACIS International Conference on Computer and Information Science},
+  year      = {2019},
+  pages     = {417-420},
+  doi       = {10.1109/icis46139.2019.8940174},
+  owner     = {Vincent},
+  timestamp = {2021.06.24},
+}
+
 @Article{Li2019t,
   author    = {Li, Z. and Zhang, L. and Song, G.},
   title     = {SepNE: Bringing Separability to Network Embedding},
@@ -21488,6 +21622,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1007/s11634-010-0076-1},
   owner     = {Vincent},
   timestamp = {2019.04.10},
+}
+
+@Article{Lotfian2019,
+  author    = {Lotfian, R. and Busso, C.},
+  title     = {Building Naturalistic Emotionally Balanced Speech Corpus by Retrieving Emotional Speech from Existing Podcast Recordings},
+  journal   = {IEEE Transactions on Affective Computing},
+  year      = {2019},
+  volume    = {10},
+  number    = {4},
+  pages     = {471-483},
+  doi       = {10.1109/taffc.2017.2736999},
+  owner     = {Vincent},
+  timestamp = {2021.06.24},
 }
 
 @InProceedings{Lotker2015,
@@ -28211,6 +28358,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.03.13},
 }
 
+@Article{Qin2020,
+  author    = {Qin, D. and Zhou, X. and Chen, L. and Huang, G. and Zhang, Y.},
+  title     = {Dynamic Connection-Based Social Group Recommendation},
+  journal   = {IEEE Transactions on Knowledge and Data Engineering},
+  year      = {2020},
+  volume    = {32},
+  number    = {3},
+  pages     = {453-467},
+  doi       = {10.1109/tkde.2018.2879658},
+  owner     = {Vincent},
+  timestamp = {2021.06.24},
+}
+
 @Article{Qu2015,
   author    = {Qu, W. and Zhang, Y. and Wang, D. and Feng, S. and Yu, G.},
   title     = {Semantic movie summarization based on string of {IE}-{RoleNets}},
@@ -29827,6 +29987,20 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1007/s11263-007-0075-7},
   owner     = {Vincent},
   timestamp = {2019.07.03},
+}
+
+@Article{Rossi2020,
+  author    = {Rossi, R. A. and Zhou, R. and Ahmed, N. K.},
+  title     = {Deep Inductive Graph Representation Learning},
+  journal   = {IEEE Transactions on Knowledge and Data Engineering},
+  year      = {2020},
+  volume    = {32},
+  number    = {3},
+  pages     = {438-452},
+  doi       = {10.1109/tkde.2018.2878247},
+  groups    = {Inductive (Embeddings)},
+  owner     = {Vincent},
+  timestamp = {2021.06.24},
 }
 
 @Article{Rossman2017,
@@ -33982,6 +34156,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://halshs.archives-ouvertes.fr/halshs-02280068/},
 }
 
+@Article{Tian2014,
+  author    = {Tian, F. and Gao, B. and Cui, Q. and Chen, E. and Liu, T.-Y.},
+  title     = {Learning deep representations for graph clustering},
+  journal   = {28th AAAI Conference on Artificial Intelligence},
+  year      = {2014},
+  pages     = {1293-1299},
+  owner     = {Vincent},
+  timestamp = {2021.06.24},
+  url       = {https://ojs.aaai.org/index.php/AAAI/article/view/8916},
+}
+
 @Article{Tian2015,
   author    = {Tian, H. and Lu, C. and Yang, J. and Banger, K. and Huntzinger, D. N. and Schwalm, C. R. and Michalak, A. M. and Cook, R. and Ciais, P. and Hayes, D. and Huang, M. and Ito, A. and Jain, A. K. and Lei, H. and Mao, J. and Pan, S. and Post, W. M. and Peng, S. and Poulter, B. and Ren, W. and Ricciuto, D. and Schaefer, K. and Shi, X. and Tao, B. and Wang, W. and Wei, Y. and Yang, Q. and Zhang, B. and Zeng, N.},
   title     = {Global patterns and controls of soil organic carbon dynamics as simulated by multiple terrestrial biosphere models: Current status and future directions},
@@ -35749,6 +35934,31 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://arxiv.org/abs/1711.07246},
 }
 
+@Article{Wang2017y,
+  author    = {Wang, Q. and Mao, Z. and Wang, B. and Guo, L.},
+  title     = {Knowledge Graph Embedding: A Survey of Approaches and Applications},
+  journal   = {IEEE Transactions on Knowledge and Data Engineering},
+  year      = {2017},
+  volume    = {29},
+  number    = {12},
+  pages     = {2724-2743},
+  doi       = {10.1109/tkde.2017.2754499},
+  owner     = {Vincent},
+  timestamp = {2021.06.24},
+}
+
+@Article{Wang2018,
+  author    = {Wang, L. and Song, R. and Qu, Z. and Zhao, H. and Zhai, C.},
+  title     = {Study of China's Publicity Translations Based on Complex Network Theory},
+  journal   = {IEEE Access},
+  year      = {2018},
+  volume    = {6},
+  pages     = {35753-35763},
+  doi       = {10.1109/access.2018.2849680},
+  owner     = {Vincent},
+  timestamp = {2021.06.24},
+}
+
 @Article{Wanner2011,
   author    = {Wanner, F. and Fuchs, J. and Oelke, D. and Keim, D. A.},
   title     = {Are my children old enough to read these books? Age suitability analysis},
@@ -37274,6 +37484,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.04.13},
 }
 
+@Article{Yang2018a,
+  author    = {Yang, H. and Jin, L. and Huang, W. and Yang, Z. and Lai, S. and Sun, J.},
+  title     = {Dense and Tight Detection of Chinese Characters in Historical Documents: Datasets and a Recognition Guided Detector},
+  journal   = {IEEE Access},
+  year      = {2018},
+  volume    = {6},
+  pages     = {30174-30183},
+  doi       = {10.1109/access.2018.2840218},
+  owner     = {Vincent},
+  timestamp = {2021.06.24},
+}
+
 @InProceedings{Yang2019,
   author    = {Yang, Z. and Dai, Z. and Yang, Y. and Carbonell, J. and Salakhutdinov, R. R. and Le, Q. V.},
   title     = {Xlnet: Generalized autoregressive pretraining for language understanding},
@@ -38056,6 +38278,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2020.08.12},
 }
 
+@Article{Zhang2017l,
+  author    = {Zhang, X. and Wang, C. and Su, Y. and Pan, L. and Zhang, H.-F.},
+  title     = {A Fast Overlapping Community Detection Algorithm Based on Weak-Cliques for Large-scale Networks},
+  journal   = {IEEE Transaction on Computational Social Systems},
+  year      = {2017},
+  volume    = {4},
+  pages     = {218-230},
+  doi       = {10.1109/TCSS.2017.2749282},
+  issue     = {4},
+  owner     = {Vincent},
+  timestamp = {2017.09.21},
+}
+
 @Article{Zhang2018,
   author    = {Zhang, Y. and Lin, H. and Yang, Z. and Wang, J. and Zhang, S. and Sun, Y. and Yang, L.},
   title     = {A hybrid model based on neural networks for biomedical relation extraction},
@@ -38379,6 +38614,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1109/tnnls.2016.2608001},
   owner     = {Vincent},
   timestamp = {2019.12.31},
+}
+
+@Article{Zhou2018,
+  author    = {Zhou, X. and Liang, X. and Du, X. and Zhao, J.},
+  title     = {Structure Based User Identification across Social Networks},
+  journal   = {IEEE Transactions on Knowledge and Data Engineering},
+  year      = {2018},
+  volume    = {30},
+  number    = {6},
+  pages     = {1178-1191},
+  doi       = {10.1109/tkde.2017.2784430},
+  owner     = {Vincent},
+  timestamp = {2021.06.24},
 }
 
 @InProceedings{Zhu2003,
