--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -105,6 +105,16 @@
   timestamp = {2020.11.30},
 }
 
+@Book{Abrams1953,
+  title     = {The mirror and the lamp: Romantic theory and the critical tradition},
+  publisher = {Oxford University Press},
+  year      = {1953},
+  author    = {Abrams, M. H.},
+  owner     = {Vincent},
+  timestamp = {2021.06.24},
+  url       = {https://books.google.fr/books?lr=&id=SSOGjRMvIGYC},
+}
+
 @Book{Abrams1999,
   title     = {A Glossary of Literary Terms},
   publisher = {Harcourt Brace College Publisher},
@@ -920,6 +930,19 @@
   timestamp = {2019.04.08},
 }
 
+@Article{Allan1977,
+  author    = {Allan, G.},
+  title     = {Class Variation in Friendship Patterns},
+  journal   = {British Journal of Sociology},
+  year      = {1977},
+  volume    = {28},
+  number    = {3},
+  pages     = {389},
+  doi       = {10.2307/590002},
+  owner     = {Vincent},
+  timestamp = {2021.06.24},
+}
+
 @Article{Allen1998,
   author    = {Allen, A.},
   title     = {Rethinking Power},
@@ -1364,6 +1387,16 @@
   owner     = {Vincent},
   timestamp = {2021.06.24},
   url       = {https://scholar.google.com/scholar?as_sdt=0%2C5&q=Is+literature+the+mirror+of+society&btnG=},
+}
+
+@Article{Anjaria2017,
+  author    = {Anjaria, U.},
+  title     = {Twenty-first-century realism},
+  journal   = {Oxford research encyclopedias online},
+  year      = {2017},
+  doi       = {10.1093/acrefore/9780190201098.013.194},
+  owner     = {Vincent},
+  timestamp = {2021.06.24},
 }
 
 @Article{Antal2005,
@@ -3710,6 +3743,16 @@
   timestamp    = {2019.12.31},
 }
 
+@Book{Blau1977,
+  title     = {Inequality and heterogeneity},
+  publisher = {Free Press},
+  year      = {1977},
+  author    = {Blau, P.},
+  owner     = {Vincent},
+  timestamp = {2021.06.24},
+  url       = {https://www.ojp.gov/ncjrs/virtual-library/abstracts/inequality-and-heterogeneity-primitive-theory-social-structure},
+}
+
 @Article{Blei2003,
   author    = {Blei, D. M. and Ng, A. Y. and Jordan, M. I.},
   title     = {Latent dirichlet allocation},
@@ -4060,6 +4103,19 @@
   doi       = {10.3115/v1/e14-2025},
   owner     = {Vincent},
   timestamp = {2020.12.19},
+}
+
+@Article{Booth1974,
+  author    = {Booth, A. and Hess, E.},
+  title     = {Cross-Sex Friendship},
+  journal   = {Journal of Marriage and the Family},
+  year      = {1974},
+  volume    = {36},
+  number    = {1},
+  pages     = {38},
+  doi       = {10.2307/350992},
+  owner     = {Vincent},
+  timestamp = {2021.06.24},
 }
 
 @Article{Booth2012,
@@ -4495,6 +4551,18 @@
   url       = {https://www.sup.org/books/title/?id=2044},
 }
 
+@InCollection{Bourdieu2006,
+  author    = {Bourdieu, P.},
+  title     = {Le capital social. Notes provisoires},
+  booktitle = {Le capital social},
+  publisher = {La Découverte},
+  year      = {2006},
+  pages     = {29-34},
+  doi       = {10.3917/dec.bevor.2006.01.0029},
+  owner     = {Vincent},
+  timestamp = {2021.06.24},
+}
+
 @Article{BourgeoisBougrine2014,
   author    = {Bourgeois-Bougrine, S. and Glaveanu, V. and Botella, M. and Guillou, K. and De Biasi, P. M. and Lubart, T.},
   title     = {The creativity maze: Exploring creativity in screenplay writing.},
@@ -4862,6 +4930,16 @@
   url       = {https://eric.ed.gov/?id=EJ1128967},
 }
 
+@InProceedings{Briggs2001,
+  author    = {Briggs, X.},
+  title     = {Ties that bind, bridge, and constrain: Social capital and segregation in the American metropolis},
+  booktitle = {International seminar on segregation and the City},
+  year      = {2001},
+  owner     = {Vincent},
+  timestamp = {2021.06.24},
+  url       = {http://www.lincolninst.edu/},
+}
+
 @InProceedings{Brill1994,
   author    = {Brill, Eric},
   title     = {Some advances in transformation-based part of speech tagging},
@@ -4917,6 +4995,19 @@
   doi       = {10.2307/2872921},
   owner     = {Vincent},
   timestamp = {2020.07.25},
+}
+
+@Article{Britton2011,
+  author    = {Britton, M. L.},
+  title     = {Close Together but Worlds Apart? Residential Integration and Interethnic Friendship in Houston},
+  journal   = {City \& Community},
+  year      = {2011},
+  volume    = {10},
+  number    = {2},
+  pages     = {182-204},
+  doi       = {10.1111/j.1540-6040.2010.01352.x},
+  owner     = {Vincent},
+  timestamp = {2021.06.24},
 }
 
 @Article{Broder2000,
@@ -5944,6 +6035,16 @@ arXiv: https://arxiv.org/abs/1709.07604},
   url       = {https://www.historyireland.com/volume-22/brian-boru-book-armagh/},
 }
 
+@Book{Casper2016,
+  title     = {The mercy journals},
+  publisher = {Arsenaal Pulp Press},
+  year      = {2016},
+  author    = {Casper, C.},
+  owner     = {Vincent},
+  timestamp = {2021.06.24},
+  url       = {https://arsenalpulp.com/Books/T/The-Mercy-Journals},
+}
+
 @InProceedings{Castilho2016,
   author    = {de Castilho, R. E. and Mújdricza-Maydt, É. and Yimam, S. M. and Hartmann, S. and Gurevych, I. and Frank, A. and Biemann, C.},
   title     = {A Web-based Tool for the Integrated Annotation of Semantic and Syntactic Structures},
@@ -6095,6 +6196,19 @@ arXiv: https://arxiv.org/abs/1709.07604},
   owner     = {Vincent},
   timestamp = {2019.04.12},
   url       = {https://aclweb.org/anthology/papers/D/D13/D13-1185/},
+}
+
+@Article{Chan2004,
+  author    = {Chan, T. W.},
+  title     = {Is There a Status Order in Contemporary British Society?: Evidence from the Occupational Structure of Friendship},
+  journal   = {European Sociological Review},
+  year      = {2004},
+  volume    = {20},
+  number    = {5},
+  pages     = {383-401},
+  doi       = {10.1093/esr/jch033},
+  owner     = {Vincent},
+  timestamp = {2021.06.24},
 }
 
 @InProceedings{Chan2009,
@@ -6670,6 +6784,16 @@ arXiv: https://arxiv.org/abs/1709.07604},
   doi       = {10.1145/3070658},
   owner     = {Vincent},
   timestamp = {2017.08.22},
+}
+
+@Book{Childress2017,
+  title     = {Under the cover: The creation, production, and reception of a novel},
+  publisher = {Princeton University Press},
+  year      = {2017},
+  author    = {Childress, C.},
+  owner     = {Vincent},
+  timestamp = {2021.06.24},
+  url       = {https://books.google.fr/books?id=TaDHDQAAQBAJ},
 }
 
 @TechReport{Chinchor1999,
@@ -7855,6 +7979,19 @@ arXiv: https://arxiv.org/abs/1709.07604},
   timestamp = {2019.04.05},
 }
 
+@Article{Curry1970,
+  author    = {Curry, T. J. and Emerson, R. M.},
+  title     = {Balance Theory: A Theory of Interpersonal Attraction?},
+  journal   = {Sociometry},
+  year      = {1970},
+  volume    = {33},
+  number    = {2},
+  pages     = {216},
+  doi       = {10.2307/2786331},
+  owner     = {Vincent},
+  timestamp = {2021.06.24},
+}
+
 @Article{Curtis2017,
   author    = {Curtis, N.},
   title     = {Wonder Woman's symbolic death: on kinship and the politics of origins},
@@ -8744,6 +8881,16 @@ arXiv: https://arxiv.org/abs/1709.07604},
   doi       = {10.1609/aaai.v33i01.33016326},
   owner     = {Vincent},
   timestamp = {2020.03.24},
+}
+
+@Book{Dickstein2007,
+  title     = {A mirror in the roadway: Literature and the Real World},
+  publisher = {Princeton University Press},
+  year      = {2007},
+  author    = {Dickstein, M.},
+  owner     = {Vincent},
+  timestamp = {2021.06.24},
+  url       = {https://books.google.fr/books?id=WC4zmQkjtqMC},
 }
 
 @Article{Diesner2005,
@@ -10406,6 +10553,19 @@ arXiv: https://arxiv.org/abs/1709.07604},
   timestamp = {2020.07.23},
 }
 
+@Article{Erigha2015,
+  author    = {Erigha, M.},
+  title     = {Race, Gender, Hollywood: Representation in Cultural Production and Digital Media's Potential for Change},
+  journal   = {Sociology Compass},
+  year      = {2015},
+  volume    = {9},
+  number    = {1},
+  pages     = {78-89},
+  doi       = {10.1111/soc4.12237},
+  owner     = {Vincent},
+  timestamp = {2021.06.24},
+}
+
 @InCollection{Erne2011,
   author    = {Erne, L.},
   title     = {The First Quarto of Romeo and Juliet},
@@ -11272,6 +11432,16 @@ arXiv: https://arxiv.org/abs/1709.07604},
   timestamp = {2019.03.28},
 }
 
+@Book{Fischer1977,
+  title     = {Networks and places. Relations in the urban setting},
+  publisher = {Free Press},
+  year      = {1977},
+  author    = {Fischer, C. S. and Jackson, R. M. and Stueve, C. A. and Gerson, K. and Mcallister Jones, L. and Baldassare, M.},
+  owner     = {Vincent},
+  timestamp = {2021.06.24},
+  url       = {https://nyuscholars.nyu.edu/en/publications/networks-and-places},
+}
+
 @InProceedings{Fischer2015a,
   author    = {Fischer, F. and Göbel, M. and Kampkaspar, D. and Trilcke, P.},
   title     = {Digital Network Analysis of Dramatic Texts},
@@ -11433,6 +11603,16 @@ arXiv: https://arxiv.org/abs/1709.07604},
   doi       = {10.1023/a:1001066508011},
   owner     = {Vincent},
   timestamp = {2019.04.10},
+}
+
+@Book{Flap2004,
+  title     = {Creation and returns of social capital. A new research program},
+  publisher = {Routledge},
+  year      = {2004},
+  author    = {Flap, H. and Volker, B.},
+  owner     = {Vincent},
+  timestamp = {2021.06.24},
+  url       = {https://www.routledge.com/Creation-and-Returns-of-Social-Capital/Flap-Volker/p/book/9781138880092},
 }
 
 @InProceedings{Fleischman2002,
@@ -15545,6 +15725,26 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2020.11.30},
 }
 
+@Book{Homans1950,
+  title     = {The human group},
+  publisher = {Harcout},
+  year      = {1950},
+  author    = {Homans, G. C.},
+  owner     = {Vincent},
+  timestamp = {2021.06.24},
+  url       = {https://books.google.fr/books?id=9_JSdpKtPOEC},
+}
+
+@Book{Homans1984,
+  title     = {Coming to my senses. The autobiography of a sociologist. New Brunswick},
+  publisher = {Transaction Books},
+  year      = {1984},
+  author    = {Homans, G. C.},
+  owner     = {Vincent},
+  timestamp = {2021.06.24},
+  url       = {https://books.google.fr/books?id=Mkd1_-65XtQC},
+}
+
 @InProceedings{Hong2010,
   author    = {Hong, R. and Wang, M. and Xu, M. and Yan, S. and Chua, T.-S.},
   title     = {Dynamic captioning},
@@ -17321,6 +17521,32 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2019.08.21},
   url       = {https://www.jstor.org/stable/41299374},
+}
+
+@Article{Kalmijn1998,
+  author    = {Kalmijn, M.},
+  title     = {Intermarriage and Homogamy: Causes, Patterns, Trends},
+  journal   = {Annual Review of Sociology},
+  year      = {1998},
+  volume    = {24},
+  number    = {1},
+  pages     = {395-421},
+  doi       = {10.1146/annurev.soc.24.1.395},
+  owner     = {Vincent},
+  timestamp = {2021.06.24},
+}
+
+@Article{Kalmijn2002,
+  author    = {Kalmijn, M.},
+  title     = {Sex segregation of friendship networks. Individual and structural determinants of having cross-sex friends},
+  journal   = {European Sociological Review},
+  year      = {2002},
+  volume    = {18},
+  number    = {1},
+  pages     = {101-117},
+  owner     = {Vincent},
+  timestamp = {2021.06.24},
+  url       = {https://www.jstor.org/stable/522917},
 }
 
 @InProceedings{Kambhatla2004,
@@ -22719,6 +22945,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2020.01.05},
 }
 
+@Book{Markovsky1994,
+  title     = {A new theory of group solidarity},
+  publisher = {Cornell University},
+  year      = {1994},
+  author    = {Markovsky, B. and Lawler, E. J.},
+  owner     = {Vincent},
+  timestamp = {2021.06.24},
+  url       = {http://digitalcommons.ilr.cornell.edu/articles/1157},
+}
+
 @Book{Marks2006,
   title     = {Inside Story: The Power of the Transformational Arc},
   publisher = {Three Mountain Press},
@@ -22739,6 +22975,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://aclweb.org/anthology/papers/L/L06/L06-1260/},
 }
 
+@Article{Marsden1987,
+  author    = {Marsden, P. V.},
+  title     = {Core Discussion Networks of Americans},
+  journal   = {American Sociological Review},
+  year      = {1987},
+  volume    = {52},
+  number    = {1},
+  pages     = {122},
+  doi       = {10.2307/2095397},
+  owner     = {Vincent},
+  timestamp = {2021.06.24},
+}
+
 @Article{Marsden1990,
   author    = {Marsden, P. V.},
   title     = {Network Data and Measurement},
@@ -22750,6 +22999,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1146/annurev.so.16.080190.002251},
   owner     = {Vincent},
   timestamp = {2019.04.11},
+}
+
+@InCollection{Marsden1990a,
+  author    = {Marsden, P.},
+  title     = {Network diversity, substructures and opportunities for contacts},
+  booktitle = {Structures of power and constraints},
+  publisher = {Cambridge University Press},
+  year      = {1990},
+  pages     = {397-410},
+  owner     = {Vincent},
+  timestamp = {2021.06.24},
+  url       = {https://scholar.google.com/scholar?as_sdt=0%2C5&q=%22Network+diversity%2C+substructures+and+opportunities+for+contacts%22&btnG=},
 }
 
 @Book{Marshall2002,
@@ -24262,6 +24523,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2020.08.13},
 }
 
+@Article{Mollenhorst2008,
+  author    = {Mollenhorst, G. and Volker, B. and Flap, H.},
+  title     = {Social Contexts and Core Discussion Networks: Using a Choice Approach to Study Similarity in Intimate Relationships},
+  journal   = {Social Forces},
+  year      = {2008},
+  volume    = {86},
+  number    = {3},
+  pages     = {937-965},
+  doi       = {10.1353/sof.0.0010},
+  owner     = {Vincent},
+  timestamp = {2021.06.24},
+}
+
 @Article{Mollgaard2016,
   author    = {Mollgaard, A. and Zettler, I. and Dammeyer, J. and Jensen, M. H. and Lehmann, S. and Mathiesen, J.},
   title     = {Measure of Node Similarity in Multilayer Networks},
@@ -25411,6 +25685,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1556/jcep.3.2005.1.3},
   owner     = {Vincent},
   timestamp = {2020.03.17},
+}
+
+@Book{Newcomb1961,
+  title     = {The Acquaintance Process},
+  publisher = {Holt, Rinehart, and Winston},
+  year      = {1961},
+  author    = {Newcomb, T. M.},
+  groups    = {Datasets},
+  owner     = {Vincent},
+  timestamp = {2016.01.06},
+  url       = {https://books.google.fr/books?id=YO4EAAAAMAAJ},
 }
 
 @Article{Newman1987,
@@ -27520,6 +27805,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1038/srep00943},
   owner     = {Vincent},
   timestamp = {2020.01.05},
+}
+
+@Article{Pettigrew1998,
+  author    = {Pettigrew, T. F.},
+  title     = {Intergroup Contact Theory},
+  journal   = {Annual Review of Psychology},
+  year      = {1998},
+  volume    = {49},
+  number    = {1},
+  pages     = {65-85},
+  doi       = {10.1146/annurev.psych.49.1.65},
+  owner     = {Vincent},
+  timestamp = {2021.06.24},
 }
 
 @Electronic{Pettit2016,
@@ -30442,6 +30740,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.04.08},
 }
 
+@Article{Rydgren2013,
+  author    = {Rydgren, J. and Sofi, D. and Hällsten, M.},
+  title     = {Interethnic Friendship, Trust, and Tolerance: Findings from Two North Iraqi Cities},
+  journal   = {American Journal of Sociology},
+  year      = {2013},
+  volume    = {118},
+  number    = {6},
+  pages     = {1650-1694},
+  doi       = {10.1086/669854},
+  owner     = {Vincent},
+  timestamp = {2021.06.24},
+}
+
 @Article{Sabidussi1966,
   author    = {Sabidussi, G.},
   title     = {The centrality index of a graph},
@@ -31860,6 +32171,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2020.01.05},
 }
 
+@Article{Signorielli1989,
+  author    = {Signorielli, N.},
+  title     = {Television and conceptions about sex roles: Maintaining conventionality and the status quo},
+  journal   = {Sex Roles},
+  year      = {1989},
+  volume    = {21},
+  number    = {5-6},
+  pages     = {341-360},
+  doi       = {10.1007/bf00289596},
+  owner     = {Vincent},
+  timestamp = {2021.06.24},
+}
+
 @InCollection{Sigurdsson2016,
   author    = {Sigurdsson, G. A. and Varol, G. and Wang, X. and Farhadi, A. and Laptev, I and Gupta, A.},
   title     = {Hollywood in Homes: Crowdsourcing Data Collection for Activity Understanding},
@@ -32236,6 +32560,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.02.20},
 }
 
+@Article{Smith2017b,
+  author    = {Smith, S.},
+  title     = {Befriending the same differently: ethnic, socioeconomic status, and gender differences in same-ethnic friendship},
+  journal   = {Journal of Ethnic and Migration Studies},
+  year      = {2017},
+  volume    = {44},
+  number    = {11},
+  pages     = {1858-1880},
+  doi       = {10.1080/1369183x.2017.1374168},
+  owner     = {Vincent},
+  timestamp = {2021.06.24},
+}
+
 @Article{Smola2004,
   author    = {Smola, A. J. and Schölkopf, B.},
   title     = {A tutorial on support vector regression},
@@ -32273,6 +32610,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.2307/2413122},
   owner     = {Vincent},
   timestamp = {2019.12.31},
+}
+
+@Book{Snijders1999,
+  title     = {Multilevel analysis: An introduction to basic and applied multilevel analysis},
+  publisher = {Sage},
+  year      = {1999},
+  author    = {Snijders, T. and Bosker, R.},
+  owner     = {Vincent},
+  timestamp = {2021.06.24},
+  url       = {https://books.google.fr/books?id=N1BQvcomDdQC},
 }
 
 @Article{Snijders2002,
@@ -32470,6 +32817,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1109/TMM.2017.2745712},
   owner     = {Vincent},
   timestamp = {2018.06.12},
+}
+
+@Book{Sontag1966,
+  title     = {Against interpretation},
+  publisher = {Farrar, Straus and Giroux},
+  year      = {1966},
+  author    = {Sontag, S.},
+  owner     = {Vincent},
+  timestamp = {2021.06.24},
+  url       = {https://www.google.fr/books/edition/Against_Interpretation_and_Other_Essays/SM9k4HC3SiEC},
 }
 
 @Article{Soon2001,
@@ -35014,6 +35371,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://dl.acm.org/citation.cfm?id=1859726},
 }
 
+@Article{Vaessens2011,
+  author    = {Vaessens, T.},
+  title     = {Dutch novelists beyond `postmodern' relativism},
+  journal   = {Journal of Dutch Literature},
+  year      = {2011},
+  volume    = {2},
+  number    = {1},
+  owner     = {Vincent},
+  timestamp = {2021.06.24},
+  url       = {http://www.journalofdutchliterature.org/index.php/jdl/article/view/12},
+}
+
 @Article{Vajna2013,
   author    = {Vajna, S. and Tóth, B. and Kertész, J.},
   title     = {Modelling bursty time series},
@@ -35294,6 +35663,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2016.03.02},
   url       = {https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3043857},
+}
+
+@Article{Verbrugge1977,
+  author    = {Verbrugge, L. M.},
+  title     = {The Structure of Adult Friendship Choices},
+  journal   = {Social Forces},
+  year      = {1977},
+  volume    = {56},
+  number    = {2},
+  pages     = {576},
+  doi       = {10.2307/2577741},
+  owner     = {Vincent},
+  timestamp = {2021.06.24},
 }
 
 @Article{Viard2018,
